--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -9,6 +9,10 @@
                                     icons: {start: offScreenButtonIconClass}}">
             </button>
             <span role="img" class="appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"></span>
+            <span data-bind="visible: $parents[0].getStateID()">
+                <span class="locationAreaHd" data-bind="text: $parents[0].locationArea"></span>
+                <span class="arrowLocation fa fa-location-arrow"></span>
+            </span>
         </div>
         <div class="oj-sm-2 oj-col oj-helper-text-align-right">
             <button class='oj-button-half-chrome' data-bind="ojComponent: { component: 'ojButton',
