--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -18,13 +18,13 @@
                 </ul>
             </div>
         </div>
-        <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+<!--        <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
             <span class="page-sub-navigation">
                     <span data-bind="text: pageSubNavigation"></span>
             <a data-bind="click: handleOpen">change</a>
-<!--                          <button id="buttonOpener" data-bind="ojComponent: {component: 'ojButton', label: 'change'}, click: handleOpen"></button>-->
+                          <button id="buttonOpener" data-bind="ojComponent: {component: 'ojButton', label: 'change'}, click: handleOpen"></button>
             </span>
-        </div>
+        </div>-->
         <!-- dialog for change location  -->
         <div id="dialogWrapper">
             <div data-bind="template: {name: 'labor/schedules-timecards/changedialog'}"></div>
