--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -30,7 +30,7 @@
             </div>
             <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
                 <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-                    <h2 id="currentPage" data-bind="text: label"></h2>
+<!--                    <h2 id="currentPage" data-bind="text: label"></h2>-->
                     <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-small'}"></div>
                 </div>
             </div>
