--- a/OracleJETApplication/templates/add-employee/add-employee-large.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-large.tmpl.html
@@ -21,6 +21,7 @@
 <!--            <span data-bind="text: firstName()"></span>-->
            <div class="resultWrapper">
                 <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
+<!--                Need to change to table component-->
                 <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                     data: listViewDataSource,
                     item: {template: 'empMatchlist_template'},
