--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -24,8 +24,9 @@
         <div class="oj-row">
             <div class="oj-col oj-sm-12" style="padding-top: 10px;">
                 <div class="oj-row">
-                    <div id="pageTitleContainer" class="oj-col oj-sm-2 oj-lg-1">
-                        <h1>People</h1>
+                    <div id="pageTitleContainer" class="oj-col oj-sm-12 oj-lg-12">
+                        <h1 class="inlineHeader">People</h1>
+                        <a href="index.html?root=add-employee" class="basic-btn-link">Add</a>
                     </div>
                     <!--Use template when parent js file is associated by default to the tmpl file -->
                     <div data-bind="template: {name: 'partials/employee-search/employee-search-large'}"></div>
