--- a/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
@@ -1,49 +1,52 @@
 <div class="oj-row">
-    <div class="oj-col oj-sm-10 oj-lg-10">
-        <h2 id="currentPage" data-bind="text: label"></h2>
+    <div class="oj-col oj-sm-10">
+<!--        <h2 id="currentPage" data-bind="text: label"></h2>-->
     </div>
-    <div class="oj-col oj-sm-2 oj-lg-2 oj-lg-text-align-end">
-        <div data-bind="click: $parent.handleOpen" style="line-height:39px;">Edit</div>
+    <div class="oj-col oj-sm-2">
+        <div data-bind="click: $parent.handleOpen('#empDialog')" style="line-height:39px;">Edit</div>
     </div>
 </div>
 <div class="oj-row">
-    <div class="oj-col oj-lg-6">
-        <h3>General</h3>
-        <div class="oj-row">
-            <div class="oj-col oj-lg-6">
-                <h4>Name</h4>
-                <span data-bind="text: $parent.firstName()"></span>
-                <span data-bind="text: $parent.lastName()"></span>
-
-                <div data-bind="visible: $parent.posCheckName()">
-                    <h4>POS Check Name</h4>
-                    <div data-bind="text: $parent.posCheckName()"></div>
-                </div>
-
-                <h4>Language</h4>
-                <div data-bind="text: $parent.language()"></div>
-
-                <h4>Time Zone</h4>
-                <div data-bind="text: $parent.timeZone()"></div>
-
+    <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}">
+        <!-- Start of Section 1 --->
+        <div id="general" data-bind="ojComponent: {component: 'ojCollapsible', expanded:true}">
+             <h3>General</h3>
                 <div>
-                    <h4>Ethnicity</h4>
-                    <div data-bind="text: $parent.ethnicity()"></div>
-                </div>
-                <div>
-                    <h4>Gender</h4>
-                    <div data-bind="text: $parent.gender()"></div>
-                </div>
-            </div>
-            <div class="oj-col oj-lg-6">
+                    <h4>Name</h4>
+                    <span data-bind="text: $parent.firstName()"></span>
+                    <span data-bind="text: $parent.lastName()"></span>
 
-                <h4>Profile Picture</h4>
-                <!--Not hooked up to an observable this may need to be an upload feature-->
+                    <div data-bind="visible: $parent.posCheckName()">
+                        <h4>POS Check Name</h4>
+                        <div data-bind="text: $parent.posCheckName()"></div>
+                    </div>
+
+                    <h4>Language</h4>
+                    <div data-bind="text: $parent.language()"></div>
+
+                    <h4>Time Zone</h4>
+                    <div data-bind="text: $parent.timeZone()"></div>
+
+                    <div>
+                        <h4>Ethnicity</h4>
+                        <div data-bind="text: $parent.ethnicity()"></div>
+                    </div>
+                    <div>
+                        <h4>Gender</h4>
+                        <div data-bind="text: $parent.gender()"></div>
+                    </div>
+                </div>
+        </div>
+        <div id="profile">
+            <h3>Profile Picture</h3>
+             <div>
                 <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
-
-                <h4>Veteran</h4>
+             </div>
+        </div>
+        <div id="veteran">
+            <h3>Veteran</h3>
+            <div>
                 <div data-bind="text: $parent.veteranStatus()"></div>
-                <!--doesn't update on modal change, need to work on this-->
                 <div data-bind="visible: $parent.veteranStatus() == 'yes'">
                     <div data-bind="text: $parent.vietnamEra()"></div>
                     <div data-bind="text: $parent.otherEligible()"></div>
@@ -58,23 +61,21 @@
                     <h4>Discharge Date</h4>
                     <div data-bind="text: $parent.dischargeDate()"></div>
                 </div>
+                
             </div>
+
         </div>
-    </div>
-    <div class="oj-col oj-lg-6">
-        <h3>Contact</h3>
-        <div class="oj-row">
-            <div class="oj-col oj-lg-6">
-                <div>
-                    <h4>Email Address</h4>
-                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
-                </div>
+        <div id="veteran">
+            <h3>Contact</h3>
+            <div>
+                <h4>Email Address</h4>
+                <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
+
                 <h4>Phone Number</h4>
                 <div data-bind="text: $parent.phone()"></div>
-                <div>
-                    <h4>Other Phone Number</h4>
-                    <div data-bind="text: $parent.mobile()"></div>
-                </div>
+
+                <h4>Other Phone Number</h4>
+                <div data-bind="text: $parent.mobile()"></div>
 
                 <div data-bind="visible: $parent.faxNumber()">
                     <h4>FAX Number</h4>
@@ -87,22 +88,19 @@
                 <span data-bind="text: $parent.state()"></span>
                 <span data-bind="text: $parent.postal()"></span>
                 <span data-bind="text: $parent.country()"></span>
-            </div>
-            <div class="oj-col oj-lg-6">
-                <div>
-                    <h4>Emergency Contact</h4>
-                    <span data-bind="html: $parent.emergencyName()"></span>
-                    <span data-bind="html: $parent.formattedRelationship()"></span>
-                    <div data-bind="html: $parent.emergencyAddress()"></div>
-                    <span data-bind="html: $parent.emergencyCity()"></span>
-                    <span data-bind="html: $parent.emergencyState()"></span>
-                    <span data-bind="html: $parent.emergencyZipCode()"></span>
-                    <div data-bind="html: $parent.emergencyPhone()"></div>
-                </div>
+
+                <h4>Emergency Contact</h4>
+                <span data-bind="html: $parent.emergencyName()"></span>
+                <span data-bind="html: $parent.formattedRelationship()"></span>
+                <div data-bind="html: $parent.emergencyAddress()"></div>
+                <span data-bind="html: $parent.emergencyCity()"></span>
+                <span data-bind="html: $parent.emergencyState()"></span>
+                <span data-bind="html: $parent.emergencyZipCode()"></span>
+                <div data-bind="html: $parent.emergencyPhone()"></div>
             </div>
         </div>
-    </div>
-    <div class="oj-col oj-lg-12">
-        <h3>Custom</h3>
-    </div>
+    </div>  
 </div>
+<div data-bind="template: {name: 'partials/employee-edit-modal/employee-edit-modal-small'}"></div>
+
+
