updated sass for new employee section

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1551,6 +1551,15 @@ a.basic-btn-link{
         width:100%;
     }
 }
+//add-employee styles
+.add-profile{
+    h4{
+        text-transform: uppercase;
+    }
+    h5{
+        margin-bottom:3px;
+    }
+}
 //Footer styles
 footer{
     position:absolute;
