--- a/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp7.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp7.tmpl.html
@@ -18,3 +18,5 @@
     <!--            <span data-bind="text: firstName()"></span>-->
 
 </div>
+<!-- Needs to be linked to profile page with new record-->
+<button id="NextStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: nextStep, ojComponent: {component: 'ojButton', label: 'Finish ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
