--- a/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp1.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp1.tmpl.html
@@ -1,23 +1,35 @@
 <div>
-                <h2>Getting Started - Search Existing/Past Employees</h2>
-                <form>
-                    <label for="firstName">First Name</label>
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: firstName}" /><br/>
+    <h2>Getting Started - Search Existing/Past Employees</h2>
+    <form>
+        <label for="firstName">First Name</label>
+        <input data-bind="ojComponent: {component: 'ojInputText', value: firstName}" />
+        <br/>
 
-                    <label for="lastName">Last Name</label>
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" /><br/>
+        <label for="lastName">Last Name</label>
+        <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
+        <br/>
 
-                    <label for="dob">Date of Birth</label>
-                    <input data-bind="ojComponent: {component: 'ojInputText', value: dob}" /><br/>
-                </form>
+        <label for="dob">Date of Birth</label>
+        <input data-bind="ojComponent: {component: 'ojInputText', value: dob}" />
+        <br/>
+    </form>
 
-                <!--to check observable-->
+    <!--to check observable-->
     <!--            <span data-bind="text: firstName()"></span>-->
-               <div class="resultWrapper">
-                    <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
-    <!--                Using the ojet listView Component-->
-    <!--
-                    <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+    <div class="resultWrapper">
+        <div data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
+        <!--                Using the ojet listView Component-->
+        <div class="listViewLabels">
+            <div class="oj-row">
+                <div class="oj-col oj-md-2">First Name</div>
+                <div class="oj-col oj-md-2">Last Name</div>
+                <div class="oj-col oj-md-2">DOB</div>
+                <div class="oj-col oj-md-3">Last Manager Name</div>
+                <div class="oj-col oj-md-2">Hire Status</div>
+                <div class="oj-col oj-md-1">Update</div>
+            </div>
+        </div>
+        <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                         data: listViewDataSource,
                         item: {template: 'empMatchlist_template'},
                         selectionMode: 'single',
@@ -25,22 +37,33 @@
                         selection: ['100'],
                         rootAttributes: {style: 'width:100%;overflow:auto; margin-top: 5px'},
                         scrollPolicyOptions: {fetchSize: 10}}">
-                    </ul>
+        </ul>
 
-                    <script type="text/html" id="empMatchlist_template">
-                        <li data-bind="attr: {id: $data['name']}">
-                            <div class="oj-row">
-                                <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
-                                    <div class="oj-row row">
-                                        <div class="oj-lg-12 oj-col">
-                                            <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </script>
-    -->
+        <script type="text/html" id="empMatchlist_template">
+            <li data-bind="attr: {id: $data['empId']}">
+                <div class="oj-row" data-bind="click: $parent.toggleSections($data['empId'], '.empDetails')">
+                    <div class="oj-col oj-sm-12 oj-md-2" data-bind="text: firstName"></div>
+                    <div class="oj-col oj-sm-12 oj-md-2" data-bind="text: lastName"></div>
+                    <div class="oj-col oj-sm-12 oj-md-2" data-bind="text: dob"></div>
+                    <div class="oj-col oj-sm-12 oj-md-3" data-bind="text: mgrFirstName + ' ' + mgrLastName"></div>
+                    <div class="oj-col oj-sm-12 oj-md-2" data-bind="text: hireStatus"></div>
+                    <div class="oj-col oj-sm-12 oj-md-1"><a href="#" data-bind="click: $parent.loadPersonPage">Update</a></div>
+                </div>
+                <div class="empDetails">
+                    <div class="oj-row">
+                        <div class="oj-col oj-sm-12 oj-md-4">
+                            <img style="width:75px; height:75px;" data-bind="attr: {src: $parent.getPhoto($data['empId'])}" />
+                        </div>
+                        <div class="oj-col oj-sm-12 oj-md-4" data-bind="text: lastName"></div>
+                        <div class="oj-col oj-sm-12 oj-md-3" data-bind="text: hireStatus"></div>
+                        <div class="oj-col oj-sm-12 oj-md-1"><a href="#" data-bind="click: $parent.loadPersonPage">Edit</a></div>
+                    </div>
+                </div>
+            </li>
+        </script>
+
+        <!--                    OJ Table view-->
+        <!--
                     <div class="oj-row">
                         <div class="oj-col oj-sm-12 oj-lg-12">
                             <table id="tableView"data-bind="ojComponent: {component: 'ojTable',
@@ -60,7 +83,10 @@
                             <td><a href="#" data-bind="click: $parent.loadPersonPage">Update</a></td>
                         </tr>
                     </script>
+-->
 
-                    <a href="index.html?root=add-employee" class="basic-btn-link">Create New Record</a>
-                </div>
-            </div>
+        <!--<a href="index.html?root=add-employee" class="basic-btn-link">Create New Record</a>-->
+
+        <button id="NextStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: nextStep, ojComponent: {component: 'ojButton', label: 'Save and Continue ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
+    </div>
+</div>
