--- a/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp2.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp2.tmpl.html
@@ -14,11 +14,24 @@
             <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
 
             <h5>POS Check Name</h5>
-            <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
+            <input id="posCheckName" type="checkbox" value="false"/>
+            <span>Inherit from profile</span>
         </div>
         <div class="oj-col oj-sm-12 oj-md-3">
-            <h4>Last Name</h4>
-            <input data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
+            <h4>Other</h4>
+            <h5>Language</h5>
+            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: language, rootAttributes: {style:'max-width:20em'}}">
+                <option value="english">English</option>
+                <option value="spanish">Spanish</option>
+                <option value="french">French</option>
+            </select>
+
+            <h5>Time Zone</h5>
+            <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: language, required: true, rootAttributes: {style:'max-width:20em'}}">
+                <option value="english">English</option>
+                <option value="spanish">Spanish</option>
+                <option value="french">French</option>
+            </select>
         </div>
         <div class="oj-col oj-sm-12 oj-md-3">
             <h4>Date of Birth</h4>
@@ -30,6 +43,10 @@
     </form>
 
     <!--to check observable-->
-    <!--            <span data-bind="text: firstName()"></span>-->
+<!--                <span data-bind="text: language()"></span>-->
 
 </div>
+
+<button id="PreviousStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: previousStep, ojComponent: { component: 'ojButton', label: 'Back', icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}}"></button>
+
+<button id="NextStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: nextStep, ojComponent: {component: 'ojButton', label: 'Save and Continue ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
