--- a/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp3.tmpl.html
+++ b/OracleJETApplication/templates/add-employee/add-employee-steps/add-employee-stp3.tmpl.html
@@ -1,5 +1,7 @@
 <div>
     <h2>New Employee - Add Schedule &amp; Timecards</h2>
+    <h2>Availability</h2>
+    <h3>Total Weekly Hours</h3>
     <form>
         <label for="firstName">First Name</label>
         <input data-bind="ojComponent: {component: 'ojInputText', value: firstName}" />
@@ -14,7 +16,20 @@
         <br/>
     </form>
 
+    <h3>Days and Times</h3>
+    <div>Add Time Segment</div>
+
+    <h3>School District</h3>
+    <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: districts, rootAttributes: {style:'max-width:20em'}}">
+        <option value="none">None</option>
+        <option value="district1">School District 1</option>
+        <option value="district2">School District 2</option>
+    </select>
     <!--to check observable-->
     <!--            <span data-bind="text: firstName()"></span>-->
 
 </div>
+
+<button id="PreviousStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: previousStep, ojComponent: { component: 'ojButton', label: 'Back', icons: {start:'oj-fwk-icon-caret-start oj-fwk-icon'}}"></button>
+
+<button id="NextStep" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: nextStep, ojComponent: {component: 'ojButton', label: 'Save and Continue ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
