--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1828,6 +1828,9 @@ footer{
         margin-left:65px;
         
     }
+    .oj-panel.tab-content{
+        padding:0;
+    }
     .profileStatusToolArea{
         list-style-type: none;
         padding-left: 0px;
@@ -1838,10 +1841,11 @@ footer{
             padding-right:10px;
             padding-left:5px;
             border-right: 1px solid $lightGray;
+
             h4{
                 font-size:12px;
                 margin-bottom:2px;
-}
+            }
         }
         li:last-child{
            border-right: 0px; 
@@ -1849,6 +1853,45 @@ footer{
         li:first-child{
             padding-left:0px;
         }
+
+    }
+    .currentWeekHeaderArea{
+        padding: 10px;
+        margin-top:10px;
+        background-color: $filmStripSubHeaderBg;
+        width: 98.25%;
+    }
+    .upcomingWeekHeaderArea{
+        padding: 10px;
+        margin-top:10px;
+        background-color: $filmStripSubHeaderBg;
+        width: 98.25%;
+    }
+    .shiftPoolLinkArea{
+        padding: 10px;
+        width: 100%;
+        display: inline;
+    }
+    .scheduleHeader{
+        padding:10px 0 5px 0px;
+    }
+    .scheduleToolArea{
+        position: relative;
+        padding-left:0px;
+        li{
+            display: inline;
+            list-style-type: none;
+        }
+    }
+
+    .shiftPoolDiv{
+       padding: 10px;
+    }
+    .emailAndPringDiv{
+        text-align: right;
+    }
+    .scheduleToolArea li:first-child{
+        padding-right: 20px;
     }
 }
 
