updated mobile tmpl files and js files and main js to allow for modal window

--- a/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-small.tmpl.html
@@ -1,1 +1,13 @@
-<!--Not being used ATM-->
+<div style="display:none;" id="externalPayrollDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
+   <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
+        <span id="dialogTitleId" class="oj-dialog-title">
+           <div>External Payroll ID Modal</div>
+        </span>
+     </div>
+    <div class="oj-dialog-body">
+        <div class="oj-row">
+
+        </div>
+        <button id="submitButton" class="basic-btn" data-bind="click: function(){handleClose('#externalPayrollDialog')}">Save</button>
+    </div>
+</div>
