--- a/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-small.tmpl.html
@@ -1,1 +1,13 @@
-<!--Not being used ATM-->
+<div style="display:none;" id="hireStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
+   <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
+        <span id="dialogTitleId" class="oj-dialog-title">
+           <div>Hire Status Modal</div>
+        </span>
+     </div>
+    <div class="oj-dialog-body">
+        <div class="oj-row">
+            <div data-bind="text: hireDate"></div>
+        </div>
+        <button id="submitButton" class="basic-btn" data-bind="click: function(){handleClose('#hireStatusDialog')}">Save</button>
+    </div>
+</div>
