--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -656,7 +656,7 @@ $buttonBorderColor:               $lightGray2;
 // -----------------------
 // $accordionPanelBgColor:               $panelBgColor;
 // $accordionPanelBorderColor:           $panelBorderColor;
-// 
+   $accordionPanelHeaderTextColor:       $white;
 // TABS
 // ---------------------------------------------------------------
 // 
@@ -1477,6 +1477,17 @@ html {
 }
 
 //helper styles
+.float-r{
+    float:right;
+}
+
+.float-l{
+    float:left;
+}
+
+.clearAll{
+    clear:both;
+}
 .full-height {
     height: 100%;
 }
@@ -1540,6 +1551,9 @@ a.basic-btn-link{
         text-decoration:none;
     }
 }
+.oj-accordion-collapsible > .oj-collapsible-header{
+    color: $accordionPanelHeaderTextColor;
+}
 //People Styles
 .resultWrapper{
     clear:both;
@@ -1577,6 +1591,19 @@ a.basic-btn-link{
 
 #newEmpAccordionSection{
     display:none;
+}
+
+//Text and edit modes
+.editMode{
+    display:block;
+}
+
+.textMode{
+    display:none;
+}
+
+.disableAccordion{
+    pointer-events: none !important;
 }
 //Footer styles
 footer{
